--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>30 Day</title>
+    <link rel="shortcut icon" href="./acsets/img/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./acsets/fonts/fontawesome-free-6.0.0-web/css/all.min.css">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </div>
+    <!-- End -->
     <div class="backgroundDay2">
         <h1 class="day">Day 02</h1>
         <div class="boxprofile">
@@ -91,5 +93,31 @@
             </div>
         </div>
     </div>
+    <!-- END -->
+    <div class="backgroundDay3">
+        <h1 class="day">Day 03</h1>
+        <div class="modal modalHide">
+          <div class="modal-container">
+              <div class="modal__header">
+                  <h3>Welcome to Jos Phan Ái</h3>
+                  <i class="fa-solid fa-xmark"></i>
+              </div>
+              <div class="modal__content">
+                  <h2>Modal</h2>
+                  <p>Đây là nội dung của modal</p>
+              </div>
+              <div class="modal__footer">
+                  <button>Close</button>
+              </div>
+          </div>
+        </div>
+        <div class="openModalBtn">
+            <button>Open Modal</button>
+        </div>
+        
+
+    </div>
+    <!-- END -->
+    <script src="./acsets/javascript/app.js"></script>
 </body>
 </html>
