--- a/index.html
+++ b/index.html
@@ -118,6 +118,53 @@
 
     </div>
     <!-- END -->
+    <div class="backgroundDay4">
+        <h1 class="day">Day 04</h1>
+        <div class="galleryImgs">
+            <div class="imageItem">
+                <img src="./acsets/img/img1.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img2.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img3.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img4.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img5.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img6.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img7.jpeg" alt="">
+            </div>
+            <div class="imageItem">
+                <img src="./acsets/img/img8.jpeg" alt="">
+            </div>
+        </div>
+        <div class="gallerryShow">
+          <div class="gallerryShow-container">
+            <i class="fa-solid fa-xmark close"></i>
+            <div class="gallerryShow-content">
+                <img src="./acsets/img/img8.jpeg" alt="">
+            </div>
+            <div class="btnleft">
+                <i class="fa-solid fa-angle-left"></i>
+
+            </div>
+            <div class="btnright">
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+          </div>
+        </div>
+        
+    </div>
+    <!-- END -->
     <script src="./acsets/javascript/app.js"></script>
 </body>
 </html>
