--- a/index.html
+++ b/index.html
@@ -164,6 +164,36 @@
         </div>
         
     </div>
+    <div class="backgroundDay5">
+        <div class="searchBox">
+            <input type="text" class="searchInput">
+            <button class="searchBtn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+    </div>
+    <div class="backgroundDay6">
+        <div class="alertBackground">Press Any Key</div>
+        <div class="detectPressKey">
+            <div class="cricleBox">65</div>
+            <div class="contentKey">
+                <div class="contentKey__key">
+                    <p class="contentKeyName">Key</p>
+                    <p class="contentKey__keycontent"></p>
+                </div>
+                <div class="contentKey__location">
+                    <p class="contentKeyName">Location</p>
+                    <p class="contentKey__locationContent"></p>
+                </div>
+                <div class="contentKey__which">
+                    <p class="contentKeyName">Which</p>
+                    <p class="contentKey__whichContent"></p>
+                </div>
+                <div class="contentKey__code">
+                    <p class="contentKeyName">Code</p>
+                    <p class="contentKey__codeContent"></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- END -->
     <script src="./acsets/javascript/app.js"></script>
 </body>
