--- a/index.html
+++ b/index.html
@@ -194,6 +194,81 @@
             </div>
         </div>
     </div>
+    <div class="backgroundDay7">
+        <div class="searchTags">
+            <div  class ="searchTags__name">Search Tags</div>
+            <div class="searchTags__content">
+                <input type="text" class="searchTags__input" placeholder="Type and Enter">
+            </div>
+            <button class="searchTags__btn">Remove All</button>
+        </div>
+    </div>
+    <div class="backgroundDay8">
+        <div class="validateForm">
+            <p class="mainTitle">Register</p>
+            <form action="" method="get">
+
+                <div class="form-username">
+                    <input type="text" class="userName" placeholder="UserName">
+                    <small></small>
+                    <span></span>
+                </div>
+                <div class="form-email">
+                    <input type="text" class="email" placeholder="Email">
+                    <small></small>
+                    <span></span>
+                </div>
+                <div class="form-password">
+                    <input type="password" class="password" placeholder="Password">
+                    <small></small>
+                    <span></span>
+                </div>
+                <div class="form-password">
+                    <input type="password" class="password2" placeholder="Confirm Password">
+                    <small></small>
+                    <span></span>
+                </div>
+                <button class="login" type="submit">Login</button>    
+            </form>
+            <p class="subTitle">Not a member? <a href="#">Signup</a></p>
+
+        </div>
+    </div>
+    <div class="backgroundDay9">
+        <div id="weather" class="">
+            <input type="text" class="searchPlace" placeholder="Search...">
+            <div class="contentWeather">
+                <div class="capital">
+                    <span class="city">Ha Noi</span>
+                    <span class="comman">,</span>
+                    <span class="country">VN</span>
+
+                </div>
+                <div class="times"><span>3/29/2022, 4:48:05 PM</span></div>
+                <div class="temperature">
+                    <span class="te__value">29<sup>o</sup>C</span>
+                </div>
+                <div class="moreDetail">Clear</div>
+                <div class="footer-des">
+                    <div class="foresight">
+                        <i class="fa-solid fa-eye"></i> 
+                        <span>10000 (m)</span>
+                    </div>
+                    <div class="wind">
+                        <i class="fa-solid fa-wind"></i>
+                        <span>3.05 (m/s)</span>
+
+                    </div>
+                    <div class="humidity">
+                        <i class="fa-solid fa-temperature-low"></i>
+                        <span>94 (%)</span>
+                    </div>
+    
+                </div>
+            </div>
+        </div>
+        
+    </div>
     <!-- END -->
     <script src="./acsets/javascript/app.js"></script>
 </body>
